--- a/project/.gitignore
+++ b/project/.gitignore
@@ -7,10 +7,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Node.js & Frontend
+frontend/node_modules/
+dist/
+dist-ssr/
+
+# Python Backend
+backend/venv/
+backend/__pycache__/
+*.pyc
+
+# Env files
+frontend/.env
+frontend/.env.local
+frontend/.env.*.local
+frontend/*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,6 +33,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
-.env.local
-.env.*.local
