--- a/project/frontend/.env.example
+++ b/project/frontend/.env.example
@@ -1,2 +1,4 @@
 VITE_YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY_HERE
 VITE_API_BASE_URL=http://localhost:3001/api    # (백엔드가 따로 있다면 URL 맞춰서)
+
+VITE_API_SERVER_URL=http://10.10.26.18:5001 # 자신의 API 서버 주소로 변경하세요
