--- a/project/backend/.env.example
+++ b/project/backend/.env.example
@@ -1,1 +1,12 @@
-REACT_APP_API_URL=http://my_ip:5001 # 자신의 API 서버 주소로 변경하세요
+# 데이터베이스 설정
+DB_HOST=localhost
+DB_NAME=autochord
+DB_USER=root
+DB_PASSWORD=your_mysql_password
+DB_PORT=3306
+
+# JWT 설정
+JWT_SECRET=your_jwt_secret_key_here
+
+# API 설정
+REACT_APP_API_URL=http://localhost:5001
