--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@types/node": "^24.0.15",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mysql2": "^3.14.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.0"
